Set developer name to Bear With Me to match dev console

--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Codekeep - Developer Domain</title>
+    <title>Bear With Me - Developer Domain</title>
 </head>
 
 <body>
 
     <header>
-        <h1>Codekeep's Developer Domain</h1>
+        <h1>Bear With Me's Developer Domain</h1>
         <p>Enjoy your stay</p>
     </header>
 
